include(${CMAKE_SOURCE_DIR}/cmake/common.cmake)

era_begin(rttr_core "THIRD-PARTY-MODULE")
    add_subdirectory(${ERA_ENGINE_PATH}/modules/thirdparty-rttr/rttr)
    find_library(rttr_core NAMES rttr_core PATHS ${ERA_ENGINE_PATH}/modules/thirdparty-rttr/rttr)
    set_property(TARGET rttr_core PROPERTY INCLUDE_PATH ${ERA_ENGINE_PATH}/modules/thirdparty-rttr/rttr/src)
    set_property(TARGET rttr_core PROPERTY TARGET_TYPE "THIRD-PARTY-MODULE")
    set_property(TARGET rttr_core PROPERTY NEED_COPY "true")
    set_property(TARGET rttr_core PROPERTY BUILD_PATH ${ERA_ENGINE_PATH}/_build/modules/thirdparty-rttr/rttr/bin/$<CONFIGURATION>)
era_end(rttr_core)